--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <!-- Navbar -->
             <nav class="navbar">
-                <a href="#section-2" class="navbar-link">iPhone 12</a>
+                <a href="#section-2" class="navbar-link">iPhone 14</a>
                 <a href="#section-3" class="navbar-link">MacBook Air</a>
                 <a href="#section-3" class="navbar-link">Watch</a>
                 <a href="#section-4" class="navbar-link">AirPods</a>
@@ -81,7 +81,7 @@
         <!-- Section 2 -->
         <section class="section-2" id="section-2">
             <!-- Section 2 Heading -->
-            <h1 class="section-2-heading">iPhone 12</h1>
+            <h1 class="section-2-heading">iPhone 14</h1>
             <!-- End of Section 2 Heading -->
 
             <!-- Section 2 Images -->
@@ -232,7 +232,7 @@
                     <img src="images/Icons/airpods-icon.png">
                 </a>
             </div>
-            <p class="copyright">Copyright &copy; CodeAndCreate All Rights Reserved</p>
+            <p class="copyright">Created by Ahmad Adel </p>
         </section>
         <!-- End of Section 6 -->
     </div>
